--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.10",
+    "mongojs": "^2.4.0",
     "mongoose": "^4.10.8",
     "request": "^2.81.0"
   },
